# consiliency-contract

./: .gitignore  LICENSE  README.md  XG1-RECONCILED-WORK.md  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
conformance/vectors/: adoption-absent-ungoverned.json  adoption-adopted-governed.json  adoption-declared-false-ungoverned.json  adoption-partial-scope.json  authority-algorithm-confusion.json  authority-bad-signature.json  authority-cert-digest-mismatch.json  authority-chain-appended-still-verifies.json  authority-core-validity-expired.json  authority-forged-self-minted.json  authority-key-expired.json  authority-key-revoked.json  authority-missing-signature.json  authority-signer-approver-mismatch.json  authority-unknown-key-id.json  authority-valid.json  authority-wrong-key-valid-id.json  canonical-html-contract-loaded.json  coordination-announce-intent-does-not-lease.json  coordination-done-does-not-release-lease.json  coordination-handoff-does-not-transfer-holder.json  coordination-message-does-not-mutate-lease.json  doc-label-foreign-governed-false.json  doc-label-present-nonconforming.json  edge-label-unmanaged-cross-repo.json  git-discipline-never-delete-human-refs.json  governed-set-undeclared-ungoverned.json  ignore-set-nested-path-any-depth.json  interface-invalid-host-path.json  (+21 more)
consiliency_contract/: __init__.py  authority.py
core/: contract.json
scripts/: authority_canon_parity.py  authority_canonical_dump.py  gen_authority_vectors.py  python_dump.py
src/: authority.js  index.d.ts  index.js
tests/: contract.test.mjs  package-content.test.mjs  test_contract.py
(+40 files in other folders)
