[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consiliency-contract"
version = "0.0.1"
description = "Consiliency cross-repo contract package (provisioning placeholder; content lands in 0.1.0)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["consiliency", "contract", "standardization", "canonical-html"]

[project.urls]
Homepage = "https://github.com/Consiliency/consiliency-contract"
Issues = "https://github.com/Consiliency/consiliency-contract/issues"

[tool.hatch.build.targets.wheel]
packages = ["consiliency_contract"]
